--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,28 +1,28 @@
 version: '3.8'
-
 services:
   drupal:
-    build: .
+    image: bitnami/drupal:latest
     ports:
-      - "8080:9000"
-    volumes:
-      - ./modules:/var/www/html/modules
-      - ./themes:/var/www/html/themes
-      - ./sites:/var/www/html/sites
-      - ./my_drupal_site:/var/www/html
-    depends_on:
-      - db
-
-  db:
-    image: mysql:8.0
+      - "8081:8080"
     environment:
-      MYSQL_ROOT_PASSWORD: rootpassword
-      MYSQL_DATABASE: drupal
-      MYSQL_USER: drupal
-      MYSQL_PASSWORD: drupalpassword
+      - DRUPAL_DATABASE_HOST=mariadb
+      - DRUPAL_DATABASE_PORT_NUMBER=3306
+      - DRUPAL_DATABASE_USER=bn_drupal
+      - DRUPAL_DATABASE_NAME=bitnami_drupal
+      - DRUPAL_DATABASE_PASSWORD=password123
+      - DRUPAL_PASSWORD=admin
+      - DRUPAL_USERNAME=user
+    depends_on:
+      - mariadb
+  mariadb:
+    image: bitnami/mariadb:latest
+    environment:
+      - MARIADB_ROOT_PASSWORD=rootpassword
+      - MARIADB_USER=bn_drupal
+      - MARIADB_PASSWORD=password123
+      - MARIADB_DATABASE=bitnami_drupal
     volumes:
-      - db-data:/var/lib/mysql
-
+      - mariadb_data:/bitnami/mariadb
 volumes:
-  db-data:
-  my_drupal_site:
+  mariadb_data:
+    driver: local
