--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
-version: '3.8'
+version: "3.8"
 services:
   drupal:
-    image: bitnami/drupal:latest
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - "8081:8080"
     environment:
