--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,30 +1,37 @@
-version: "3.8"
+# Copyright VMware, Inc.
+# SPDX-License-Identifier: APACHE-2.0
+
+version: "2"
 services:
+  mariadb:
+    image: docker.io/bitnami/mariadb:11.2
+    environment:
+      # ALLOW_EMPTY_PASSWORD is recommended only for development.
+      - ALLOW_EMPTY_PASSWORD=yes
+      - MARIADB_USER=bn_drupal
+      - MARIADB_DATABASE=bitnami_drupal
+    volumes:
+      - "mariadb_data:/bitnami/mariadb"
   drupal:
-    build:
-      context: .
-      dockerfile: Dockerfile
+    image: docker.io/bitnami/drupal:10
+    user: root
     ports:
-      - "8081:8080"
+      - "80:8080"
+      - "443:8443"
     environment:
       - DRUPAL_DATABASE_HOST=mariadb
       - DRUPAL_DATABASE_PORT_NUMBER=3306
       - DRUPAL_DATABASE_USER=bn_drupal
       - DRUPAL_DATABASE_NAME=bitnami_drupal
-      - DRUPAL_DATABASE_PASSWORD=password123
-      - DRUPAL_PASSWORD=admin
-      - DRUPAL_USERNAME=user
+      # ALLOW_EMPTY_PASSWORD is recommended only for development.
+      - ALLOW_EMPTY_PASSWORD=yes
+    volumes:
+      - ./my-httpd.conf:/opt/bitnami/apache2/conf/httpd.conf
+      - ./drupal:/bitnami/drupal
     depends_on:
       - mariadb
-  mariadb:
-    image: bitnami/mariadb:latest
-    environment:
-      - MARIADB_ROOT_PASSWORD=rootpassword
-      - MARIADB_USER=bn_drupal
-      - MARIADB_PASSWORD=password123
-      - MARIADB_DATABASE=bitnami_drupal
-    volumes:
-      - mariadb_data:/bitnami/mariadb
 volumes:
   mariadb_data:
+    driver: local
+  drupal_data:
     driver: local
